--- a/client/src/main/resources/GameScene.fxml
+++ b/client/src/main/resources/GameScene.fxml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -12,17 +10,6 @@
 <BorderPane prefHeight="285.0" prefWidth="288.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.aticatac.menus.UIController">
    <center>
       <GridPane alignment="center" hgap="10" prefHeight="207.0" prefWidth="288.0" stylesheets="sample.css" vgap="20" BorderPane.alignment="CENTER">
-         <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#loadSinglePlayerScene" text="Single Player" textFill="#f49302" />
-         <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#loadMultiPlayerScene" text="Multiplayer" textFill="#f49302" GridPane.rowIndex="1">
-            <GridPane.margin>
-               <Insets />
-            </GridPane.margin>
-         </Button>
-         <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#LoadSettingsScene" text="Settings" textFill="#f49302" GridPane.rowIndex="2">
-            <font>
-               <Font name="System Font" size="13.0" />
-            </font>
-         </Button>
          <columnConstraints>
             <ColumnConstraints />
          </columnConstraints>
@@ -34,7 +21,7 @@
       </GridPane>
    </center>
    <top>
-      <Label prefHeight="300.0" style="-fx-font-family: ArcadeClassic; -fx-font-size: 100;" text="AticAtac" textFill="#f2ea10" BorderPane.alignment="CENTER">
+      <Label prefHeight="300.0" style="-fx-font-family: ArcadeClassic; -fx-font-size: 100;" text="GameScene" textFill="#f2ea10" BorderPane.alignment="CENTER">
          <font>
             <Font size="48.0" />
          </font></Label>
