--- a/client/src/main/resources/MainMenuScene.fxml
+++ b/client/src/main/resources/MainMenuScene.fxml
@@ -11,7 +11,7 @@
 
 <BorderPane prefHeight="285.0" prefWidth="288.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.aticatac.menus.UIController">
    <center>
-      <GridPane alignment="center" hgap="10" prefHeight="207.0" prefWidth="288.0" stylesheets="sample.css" vgap="20" BorderPane.alignment="CENTER">
+      <GridPane alignment="center" hgap="10" prefHeight="207.0" prefWidth="288.0" stylesheets="MainMenuScene.css" vgap="20" BorderPane.alignment="CENTER">
          <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#loadSinglePlayerScene" text="Single Player" textFill="#f49302" />
          <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#loadMultiPlayerScene" text="Multiplayer" textFill="#f49302" GridPane.rowIndex="1">
             <GridPane.margin>
