--- a/client/src/main/resources/MainMenuScene.fxml
+++ b/client/src/main/resources/MainMenuScene.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="285.0" prefWidth="288.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.aticatac.menus.UIController">
+<BorderPane prefHeight="285.0" prefWidth="288.0" styleClass="root" stylesheets="@SceneStyler.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.aticatac.menus.UIController">
    <center>
-      <GridPane alignment="center" hgap="10" prefHeight="207.0" prefWidth="288.0" stylesheets="MainMenuScene.css" vgap="20" BorderPane.alignment="CENTER">
+      <GridPane alignment="center" hgap="10" prefHeight="207.0" prefWidth="288.0" stylesheets="SceneStyler.css" vgap="20" BorderPane.alignment="CENTER">
          <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#loadSinglePlayerScene" text="Single Player" textFill="#f49302" />
          <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#loadMultiPlayerScene" text="Multiplayer" textFill="#f49302" GridPane.rowIndex="1">
             <GridPane.margin>
@@ -34,7 +34,7 @@
       </GridPane>
    </center>
    <top>
-      <Label prefHeight="300.0" style="-fx-font-family: ArcadeClassic; -fx-font-size: 100;" text="AticAtac" textFill="#f2ea10" BorderPane.alignment="CENTER">
+      <Label prefHeight="300.0" text="AticAtac" textFill="#f2ea10" BorderPane.alignment="CENTER">
          <font>
             <Font size="48.0" />
          </font></Label>
