--- a/client/src/main/resources/SceneStyler.css
+++ b/client/src/main/resources/SceneStyler.css
@@ -7,9 +7,16 @@
 .label{
     -fx-font-family: ArcadeClassic;
     -fx-font-size: 60;
+    -fx-text-fill: #f2ea10;
 }
 .button{
     -fx-background-color: black;
     -fx-font-family: ArcadeClassic;
     -fx-font-size: 20;
+    -fx-text-fill: #f49302;
+}
+.check-box{
+    -fx-font-family: ArcadeClassic;
+    -fx-font-size: 20;
+    -fx-text-fill: #f49302;
 }
