--- a/client/src/main/resources/SettingsScene.fxml
+++ b/client/src/main/resources/SettingsScene.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -7,23 +8,28 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="285.0" prefWidth="288.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.aticatac.menus.UIController">
+<BorderPane prefHeight="285.0" prefWidth="288.0" style="-fx-background-color: black;" styleClass="root" stylesheets="@SceneStyler.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.aticatac.menus.UIController">
+   <top>
+      <Label prefHeight="136.0" prefWidth="264.0" text="Settings" textFill="#f2ea10" BorderPane.alignment="CENTER">
+         <font>
+            <Font size="48.0" />
+         </font></Label>
+   </top>
    <center>
-      <GridPane alignment="center" hgap="10" prefHeight="207.0" prefWidth="288.0" stylesheets="MainMenuScene.css" vgap="20" BorderPane.alignment="CENTER">
+      <GridPane alignment="center" hgap="10" maxHeight="-Infinity" prefHeight="145.0" prefWidth="288.0" stylesheets="SceneStyler.css" vgap="20" BorderPane.alignment="CENTER">
          <columnConstraints>
             <ColumnConstraints />
          </columnConstraints>
          <rowConstraints>
             <RowConstraints />
             <RowConstraints />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" />
+            <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" />
+            <RowConstraints maxHeight="10.0" minHeight="10.0" prefHeight="10.0" />
          </rowConstraints>
+         <children>
+            <CheckBox mnemonicParsing="false" prefHeight="44.0" prefWidth="190.0" text="toggle   sound" textFill="#ffb30f" />
+            <CheckBox mnemonicParsing="false" text="clear   scores" textFill="#dd2b2b" GridPane.rowIndex="1" />
+         </children>
       </GridPane>
    </center>
-   <top>
-      <Label prefHeight="300.0" style="-fx-font-family: ArcadeClassic; -fx-font-size: 100;" text="Settings Scene" textFill="#f2ea10" BorderPane.alignment="CENTER">
-         <font>
-            <Font size="48.0" />
-         </font></Label>
-   </top>
 </BorderPane>
