--- a/client/src/main/resources/SettingsScene.fxml
+++ b/client/src/main/resources/SettingsScene.fxml
@@ -27,8 +27,8 @@
             <RowConstraints maxHeight="10.0" minHeight="10.0" prefHeight="10.0" />
          </rowConstraints>
          <children>
-            <CheckBox mnemonicParsing="false" prefHeight="44.0" prefWidth="190.0" text="toggle   sound" textFill="#ffb30f" />
-            <CheckBox mnemonicParsing="false" text="clear   scores" textFill="#dd2b2b" GridPane.rowIndex="1" />
+            <CheckBox mnemonicParsing="false" prefHeight="44.0" prefWidth="190.0" text="toggle   sound" />
+            <CheckBox mnemonicParsing="false" text="clear   scores" GridPane.rowIndex="1" />
          </children>
       </GridPane>
    </center>
