--- a/client/src/main/resources/GameScene.fxml
+++ b/client/src/main/resources/GameScene.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -7,7 +8,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="285.0" prefWidth="288.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.aticatac.menus.UIController">
+<BorderPane prefHeight="399.0" prefWidth="429.0" stylesheets="@SceneStyler.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.aticatac.menus.UIController">
    <center>
       <GridPane alignment="center" hgap="10" prefHeight="207.0" prefWidth="288.0" stylesheets="SceneStyler.css" vgap="20" BorderPane.alignment="CENTER">
          <columnConstraints>
@@ -21,9 +22,12 @@
       </GridPane>
    </center>
    <top>
-      <Label prefHeight="300.0" style="-fx-font-family: ArcadeClassic; -fx-font-size: 100;" text="GameScene" textFill="#f2ea10" BorderPane.alignment="CENTER">
+      <Label prefHeight="68.0" prefWidth="137.0" style="-: ; -: ;" text="Game" textAlignment="CENTER" textFill="#f2ea10" BorderPane.alignment="CENTER">
          <font>
             <Font size="48.0" />
          </font></Label>
    </top>
+   <bottom>
+      <Button mnemonicParsing="false" onAction="#loadMainMenu" text="quit" BorderPane.alignment="CENTER" />
+   </bottom>
 </BorderPane>
