--- a/client/src/main/resources/MainMenuScene.fxml
+++ b/client/src/main/resources/MainMenuScene.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="285.0" prefWidth="288.0" styleClass="root" stylesheets="@SceneStyler.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.aticatac.menus.UIController">
+<BorderPane prefHeight="437.0" prefWidth="313.0" styleClass="root" stylesheets="@SceneStyler.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.aticatac.menus.UIController">
    <center>
       <GridPane alignment="center" hgap="10" prefHeight="207.0" prefWidth="288.0" stylesheets="SceneStyler.css" vgap="20" BorderPane.alignment="CENTER">
          <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#loadSinglePlayerScene" text="Single Player" textFill="#f49302" />
@@ -18,7 +18,8 @@
                <Insets />
             </GridPane.margin>
          </Button>
-         <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#LoadSettingsScene" text="Settings" textFill="#f49302" GridPane.rowIndex="2">
+         <Button mnemonicParsing="false" onAction="#loadScoreScene" prefHeight="38.0" prefWidth="167.0" text="Scores" GridPane.rowIndex="2" />
+         <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#loadSettingsScene" text="Settings" textFill="#f49302" GridPane.rowIndex="3">
             <font>
                <Font name="System Font" size="13.0" />
             </font>
@@ -30,11 +31,12 @@
             <RowConstraints />
             <RowConstraints />
             <RowConstraints minHeight="10.0" prefHeight="30.0" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" />
          </rowConstraints>
       </GridPane>
    </center>
    <top>
-      <Label prefHeight="300.0" text="AticAtac" textFill="#f2ea10" BorderPane.alignment="CENTER">
+      <Label prefHeight="39.0" prefWidth="264.0" text="AticAtac" textFill="#f2ea10" BorderPane.alignment="CENTER">
          <font>
             <Font size="48.0" />
          </font></Label>
