--- a/client/src/main/resources/SceneStyler.css
+++ b/client/src/main/resources/SceneStyler.css
@@ -11,6 +11,7 @@
 }
 .button{
     -fx-background-color: black;
+    -fx-border-color:orange;
     -fx-font-family: ArcadeClassic;
     -fx-font-size: 20;
     -fx-text-fill: #f49302;
