--- a/client/src/main/resources/SettingsScene.fxml
+++ b/client/src/main/resources/SettingsScene.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
@@ -10,7 +11,7 @@
 
 <BorderPane prefHeight="285.0" prefWidth="288.0" style="-fx-background-color: black;" styleClass="root" stylesheets="@SceneStyler.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.aticatac.menus.UIController">
    <top>
-      <Label prefHeight="136.0" prefWidth="264.0" text="Settings" textFill="#f2ea10" BorderPane.alignment="CENTER">
+      <Label prefHeight="51.0" prefWidth="264.0" text="Settings" textFill="#f2ea10" BorderPane.alignment="CENTER">
          <font>
             <Font size="48.0" />
          </font></Label>
@@ -27,9 +28,12 @@
             <RowConstraints maxHeight="10.0" minHeight="10.0" prefHeight="10.0" />
          </rowConstraints>
          <children>
-            <CheckBox mnemonicParsing="false" prefHeight="44.0" prefWidth="190.0" text="toggle   sound" />
-            <CheckBox mnemonicParsing="false" text="clear   scores" GridPane.rowIndex="1" />
+            <CheckBox mnemonicParsing="false" onAction="#toggleSound" prefHeight="44.0" prefWidth="190.0" text="toggle   sound" />
+            <CheckBox mnemonicParsing="false" onAction="#toggleClearScores" text="clear   scores" GridPane.rowIndex="1" />
          </children>
       </GridPane>
    </center>
+   <bottom>
+      <Button mnemonicParsing="false" onAction="#loadMainMenu" text="Back" BorderPane.alignment="CENTER" />
+   </bottom>
 </BorderPane>
