fixed css warning message and edited how game scene is called.

--- a/client/src/main/resources/GameScene.fxml
+++ b/client/src/main/resources/GameScene.fxml
@@ -22,7 +22,7 @@
       </GridPane>
    </center>
    <top>
-      <Label prefHeight="68.0" prefWidth="137.0" style="-: ; -: ;" text="Game" textAlignment="CENTER" textFill="#f2ea10" BorderPane.alignment="CENTER">
+      <Label prefHeight="68.0" prefWidth="137.0" text="Game" textAlignment="CENTER" textFill="#f2ea10" BorderPane.alignment="CENTER">
          <font>
             <Font size="48.0" />
          </font></Label>
