--- a/client/src/main/resources/EngineEditor.fxml
+++ b/client/src/main/resources/EngineEditor.fxml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-
-<VBox prefHeight="545.0" prefWidth="866.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.aticatac.engine.EngineEditorUI">
+<VBox xmlns:fx="http://javafx.com/fxml/1" prefHeight="545.0" prefWidth="866.0" xmlns="http://javafx.com/javafx/10.0.1"
+      fx:controller="com.aticatac.client.engine.EngineEditorUI">
     <AnchorPane prefWidth="692.0">
         <Label alignment="CENTER" layoutX="374.0" layoutY="3.0" style="&#10;" text="Prefab Generator" textAlignment="CENTER" textFill="#9f9f9f">
             <font>
