--- a/client/src/main/resources/GameScene.fxml
+++ b/client/src/main/resources/GameScene.fxml
@@ -2,13 +2,10 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-
-<BorderPane prefHeight="399.0" prefWidth="429.0" stylesheets="@SceneStyler.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.aticatac.menus.UIController">
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="399.0" prefWidth="429.0" stylesheets="@SceneStyler.css"
+            xmlns="http://javafx.com/javafx/8.0.172-ea" fx:controller="com.aticatac.client.menus.UIController">
    <center>
       <GridPane alignment="center" hgap="10" prefHeight="207.0" prefWidth="288.0" stylesheets="SceneStyler.css" vgap="20" BorderPane.alignment="CENTER">
          <columnConstraints>
