--- a/client/src/main/resources/MainMenuScene.fxml
+++ b/client/src/main/resources/MainMenuScene.fxml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-
-<BorderPane prefHeight="437.0" prefWidth="313.0" stylesheets="@SceneStyler.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.aticatac.menus.UIController">
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="437.0" prefWidth="313.0" stylesheets="@SceneStyler.css"
+            xmlns="http://javafx.com/javafx/8.0.172-ea" fx:controller="com.aticatac.client.menus.UIController">
    <center>
       <GridPane alignment="center" hgap="10" prefHeight="207.0" prefWidth="288.0" stylesheets="SceneStyler.css" vgap="20" BorderPane.alignment="CENTER">
          <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#singlePlayer" text="Single Player" textFill="#f49302" />
